--- a/acces.css
+++ b/acces.css
@@ -1054,7 +1054,7 @@
 
 	.comments__block {
 	background:
- 	url("img/Fon__comments.jpg") center no-repeat;
+ 	url("img/fon__comments.jpg") center no-repeat;
  	-wibkit-background-size: cover;
 	background-size: cover;
 	}
